SERVER-24785 backup_restore.js fails when observing FTDC interim files